--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!--LINK FONT-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
     <title>FP Selection</title>
 </head>
+
 <body>
     <header>
         <img src="img/logo.png" alt="logo ft">
@@ -18,38 +29,78 @@
         </nav>
     </header>
 
-    <section>
-      <div class="list">
-        <div class="item">
-            <div class="car-img">
-                <img src="img/1.png" alt="imagem carro">
+    <section class="container">
+        <div class="list">
+            <div class="item active">
+                <div class="car-img">
+                    <img src="img/1.png" alt="imagem carro">
+                </div>
+                <div class="content">
+                    <p class="car-information">
+                        Único Dono
+                    </p>
+                    <h2>911 Turbo</h2>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis numquam a nobis accusantium aut
+                        itaque, obcaecati excepturi explicabo, maiores architecto maxime esse quidem! Vitae natus
+                        assumenda illum perspiciatis, molestiae distinctio.
+                    </p>
+                    <button class="information">Saiba mais</button>
+                </div>
             </div>
-            <div class="content">
-                <p class="car-information">
-                    Único Dono
-                </p>
-                <h2>Porsche</h2>
-                <p class="description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis numquam a nobis accusantium aut itaque, obcaecati excepturi explicabo, maiores architecto maxime esse quidem! Vitae natus assumenda illum perspiciatis, molestiae distinctio.
-                </p>
-                <button class="information">Saiba mais</button>
+
+             <div class="item">
+                <div class="car-img">
+                    <img src="img/2.png" alt="imagem carro">
+                </div>
+                <div class="content">
+                    <p class="car-information">
+                        Conversível
+                    </p>
+                    <h2>ferrari</h2>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis numquam a nobis accusantium aut
+                        itaque, obcaecati excepturi explicabo, maiores architecto maxime esse quidem! Vitae natus
+                        assumenda illum perspiciatis, molestiae distinctio.
+                    </p>
+                    <button class="information">Saiba mais</button>
+                </div>
+            </div>
+
+             <div class="item ">
+                <div class="car-img">
+                    <img src="img/3.png" alt="imagem carro">
+                </div>
+                <div class="content">
+                    <p class="car-information">
+                       2015
+                    </p>
+                    <h2>Lamborghini</h2>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis numquam a nobis accusantium aut
+                        itaque, obcaecati excepturi explicabo, maiores architecto maxime esse quidem! Vitae natus
+                        assumenda illum perspiciatis, molestiae distinctio.
+                    </p>
+                    <button class="information">Saiba mais</button>
+                </div>
             </div>
         </div>
-      </div>
 
-      <div class="arrows">
-        <button><img src="img/seta.png" alt="seta esquerda"></button>
-         <button><img src="img/seta.png" alt="seta direita"></button>
-      </div>
+        <div class="arrows">
+            <button id="prev"><img src="img/seta.png" alt="seta esquerda"></button>
+            <button id="next"><img src="img/seta.png" alt="seta direita"></button>
+        </div>
 
-      <div class="indicators">
-        <div class="number">1</div>
-        <ul>
-            <li class="active"></li>
-            <li></li>
-            <li></li>
-        </ul>
-      </div>
+        <div class="indicators">
+            <div class="number">1</div>
+            <ul>
+                <li class="active"></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
     </section>
+    <script src="script.js"></script>
 </body>
+
 </html>
