--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <img src="img/logo.png" alt="logo ft">
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Carros</li>
-                <li>Fale conosco</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Carros</a></li>
+                <li><a href="#">Fale conosco</a></li>
             </ul>
         </nav>
     </header>
@@ -37,49 +37,48 @@
                 </div>
                 <div class="content">
                     <p class="car-information">
-                        Único Dono
+                        Performance
                     </p>
                     <h2>911 Turbo</h2>
                     <p class="description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis numquam a nobis accusantium aut
-                        itaque, obcaecati excepturi explicabo, maiores architecto maxime esse quidem! Vitae natus
-                        assumenda illum perspiciatis, molestiae distinctio.
+                        O Porsche 911 Turbo une elegância, potência e tecnologia em um design atemporal. Com aceleração
+                        impressionante e dirigibilidade precisa, ele oferece uma experiência única para quem busca
+                        esportividade com sofisticação.
                     </p>
                     <button class="information">Saiba mais</button>
                 </div>
             </div>
 
-             <div class="item">
+            <div class="item">
                 <div class="car-img">
                     <img src="img/2.png" alt="imagem carro">
                 </div>
                 <div class="content">
                     <p class="car-information">
-                        Conversível
+                       Exclusividade
                     </p>
-                    <h2>ferrari</h2>
+                    <h2>Ferrari</h2>
                     <p class="description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis numquam a nobis accusantium aut
-                        itaque, obcaecati excepturi explicabo, maiores architecto maxime esse quidem! Vitae natus
-                        assumenda illum perspiciatis, molestiae distinctio.
+                        Com design marcante e alto desempenho, a Ferrari é ideal para quem busca exclusividade e emoção
+                        ao dirigir. Um ícone do automobilismo que une luxo, potência e sofisticação.
                     </p>
                     <button class="information">Saiba mais</button>
                 </div>
             </div>
 
-             <div class="item ">
+            <div class="item ">
                 <div class="car-img">
                     <img src="img/3.png" alt="imagem carro">
                 </div>
                 <div class="content">
                     <p class="car-information">
-                       2015
+                       Ousadia
                     </p>
                     <h2>Lamborghini</h2>
                     <p class="description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis numquam a nobis accusantium aut
-                        itaque, obcaecati excepturi explicabo, maiores architecto maxime esse quidem! Vitae natus
-                        assumenda illum perspiciatis, molestiae distinctio.
+                        Com design imponente e performance inigualável, a Lamborghini é feita para quem busca
+                        exclusividade, velocidade e luxo. Um superesportivo que combina engenharia de ponta com emoção
+                        em cada detalhe.
                     </p>
                     <button class="information">Saiba mais</button>
                 </div>
@@ -92,7 +91,7 @@
         </div>
 
         <div class="indicators">
-            <div class="number">1</div>
+            <div class="number">01</div>
             <ul>
                 <li class="active"></li>
                 <li></li>
