--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Carros</a></li>
-                <li><a href="#">Fale conosco</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
         </nav>
     </header>
